--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,27 +8,48 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="njh.androidApp.scratchoffstats.MainActivity"
     android:orientation="vertical"
-    android:background="#000"
-    android:gravity="bottom">    
+    android:background="#000">    
 
-    <TextView
-        android:layout_width="match_parent"
+    <TextView android:id="@+id/spentID"
+        android:layout_gravity="top"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/spent"
+        android:textSize="25.0sp"
+        android:text="@string/spentText"
         android:textColor="#f00"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/won"
-        android:textColor="#0f0"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tickets"
-        android:textColor="#fff"/>
 
+    <TextView android:id="@+id/wonID"
+        android:layout_gravity="top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25.0sp"
+        android:text="@string/wonText"
+        android:textColor="#0f0"/>
     
-    <Button
+    <TextView android:id="@+id/ticketsID"
+        android:layout_gravity="top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25.0sp"
+        android:text="@string/ticketsText"
+        android:textColor="#fff"/>
+    
+   
+    <EditText android:id="@+id/ticketValue"
+        android:layout_gravity="bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/ticketValueEditText"/>
+    
+
+    <EditText android:id="@+id/ticketWin"
+        android:layout_gravity="bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/ticketWinEditText"/>
+    
+    <Button android:id="@+id/buttonID"
+        android:layout_gravity="bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/buttonText" 
