update readme, add devider, fix net bug, create clear dialog box

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -45,6 +45,10 @@
         android:text="@string/netText"
         android:textColor="#fff"/>
     
+    <View 
+        android:layout_height="1dp"
+        android:layout_width="match_parent"
+        android:background="#999"/>    
    
     <EditText android:id="@+id/ticketValue"
         android:layout_gravity="bottom"
