--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="njh.androidApp.scratchoffstats.AboutActivity" >
 
-    <TextView
+    <TextView android:id="@+id/aboutTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/aboutContent" />
